Layout issue with h3 tags Ambassadors page : h3 block not 100%, breaking the layout

--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -182,6 +182,9 @@ main.mdl-layout__content{
   }
   
   #events, #ambassadors, #agenda{
+    h3{
+      width: 100%;
+    }
     div > .material-icons{
       vertical-align: bottom;
       width:1.5em;
